# PolkaPulse

./: LOCAL_SETUP.md  README.md  TECHNICAL_DOCUMENTATION.md  USER_FLOW.md  local_testing.md
frontend/: .env.example  next.config.ts  package.json  postcss.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/coretime/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/vault/: page.tsx
frontend/components/coretime/: CoretimeStatus.tsx  EpochCountdown.tsx  PartnerParachains.tsx
frontend/components/layout/: Footer.tsx  (+2 more)
frontend/constants/: index.ts
frontend/hooks/: useCoretimeData.ts  useDeposit.ts  useExchangeRate.ts  useWithdraw.ts  useYieldStats.ts  useppDOTBalance.ts
frontend/lib/: contracts.ts  polkadot.ts  utils.ts  wagmi.config.ts
frontend/providers/: QueryProvider.tsx  WalletProvider.tsx
frontend/types/: contract.ts  protocol.ts
pvm-modules/: .env.example  Cargo.toml  README.md
pvm-modules/precompiles/: math_lib_precompile.rs  mod.rs  yield_optimizer_precompile.rs
pvm-modules/src/: abi.rs  lib.rs  math_lib.rs  precompile_set.rs  tests.rs  yield_optimizer.rs
pvm-modules/src/precompiles/: math_lib_precompile.rs  yield_optimizer_precompile.rs
smart-contracts/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
smart-contracts/contracts/: AtomicYieldExecutor.sol  CoretimeArbitrage.sol  PolkaPulseCore.sol  RewardMonitor.sol  ppDOT.sol
smart-contracts/scripts/: deploy.ts  simulate-yield-loop.ts
smart-contracts/test/: CoretimeArbitrage.test.ts  Governance.test.ts  PolkaPulseCore.test.ts
(+26 files in other folders)
